# task-manager-api

./: .env.example  .gitignore  docker-compose.yml  pylock.toml  pyproject.toml  readme.md
scripts/: _ruff.py  dev.py  format.py  lint.py
task_manager/: main.py
task_manager/core/: config.py  database.py
